--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Title</title>
-    <style>
-        /* Basic CSS styling can go here */
-        body {
-            font-family: sans-serif; /* Example font */
-            margin: 0; /* Reset default margins */
-            padding: 0; /* Reset default padding */
-        }
-    </style>
-</head>
-<body>
+{%extends 'base.html' %}
 
-    <h1>Hello, World!</h1>
-    <p>This is some example text.</p>
+{% block head %}
+<title>TaskMaster</title>
+{% endblock %}
 
-</body>
-</html>
+{% block body %}
+<div class ="content">
+    <h1>Task Master</h1>
+
+    <table>
+        <tr>
+            <th>Task   </th>
+            <th>added  </th>
+            <th>Actions</th>
+        </tr>
+        
+        <tr>
+
+            <td></td>
+            <td></td>
+            <td>
+                <a href = "">Delete</a>
+                <br>
+                <a href = ""> Update</a>
+            </td>
+        </tr>
+    </table>
+    <form ation = "/" method = "POST">
+        <input type = "text" name="content" id="content">
+        <input type = "Submit" value = "add Task">
+    </form>
+</div>
+{% endblock %}
