--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class ="content">
-    <h1>Task Master</h1>
+    <h1 style = "text-align: center">Task Master</h1>
 
     <table>
         <tr>
@@ -15,18 +15,21 @@
             <th>Actions</th>
         </tr>
         
-        <tr>
-
-            <td></td>
-            <td></td>
-            <td>
-                <a href = "">Delete</a>
-                <br>
-                <a href = ""> Update</a>
-            </td>
-        </tr>
+        {% for task in tasks %}
+            <tr>
+                <td>{{ task.contnet }}</td>
+                <td>{{ task.date_created.date() }}</td>
+                <td>
+                    <a href = "">Delete</a>
+                    <br>
+                    <a href = ""> Update</a>
+                </td> 
+            </tr>
+        {% endfor %}     
     </table>
-    <form ation = "/" method = "POST">
+
+
+    <form action = "/" method = "POST">
         <input type = "text" name="content" id="content">
         <input type = "Submit" value = "add Task">
     </form>
