--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 <td>{{ task.contnet }}</td>
                 <td>{{ task.date_created.date() }}</td>
                 <td>
-                    <a href = "">Delete</a>
+                    <a href="/delete/{{task.id}}">Delete</a>
                     <br>
                     <a href = ""> Update</a>
                 </td> 
