--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
 {% block body %}
 <div class ="content">
     <h1 style = "text-align: center">Task Master</h1>
+    {% if tasks|length < 1 %}
+    <h4 style = "text-align: center"> Ther are no tasks create one below</h4>
+    {% else %}
 
     <table>
         <tr>
@@ -22,12 +25,12 @@
                 <td>
                     <a href="/delete/{{task.id}}">Delete</a>
                     <br>
-                    <a href = ""> Update</a>
+                    <a href="/upda/{{task.id}}"> Update</a>
                 </td> 
             </tr>
         {% endfor %}     
     </table>
-
+    {% endif %}  
 
     <form action = "/" method = "POST">
         <input type = "text" name="content" id="content">
