--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         
         {% for task in tasks %}
             <tr>
-                <td>{{ task.contnet }}</td>
+                <td>{{ task.content }}</td>
                 <td>{{ task.date_created.date() }}</td>
                 <td>
                     <a href="/delete/{{task.id}}">Delete</a>
